update img controller